--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments.html :: signup-login-head"></head>
+<head th:replace="fragments.html :: head (page='sign-up')"></head>
 <body style="background-color: #666666;">
 <nav th:replace="fragments.html::main-nav"></nav>
 <div class="limiter">
@@ -76,11 +76,7 @@
 </div>
 
 <!--===============================================================================================-->
-<script src="/node_modules/jquery/dist/jquery.min.js"></script>
-<!--===============================================================================================-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animsition/3.2.1/js/animsition.min.js"></script>
-<!--===============================================================================================-->
-<script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <!--===============================================================================================-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.9/js/select2.min.js"></script>
 <!--===============================================================================================-->
