--- a/src/main/resources/templates/account/checked-email.html
+++ b/src/main/resources/templates/account/checked-email.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments.html :: head (page)"></head>
 <body class="bg-light">
+    <div th:replace="fragments.html :: main-nav"></div>
     <div class="container">
         <div class="row justify-content-center">
             <div class="py-5 text-center" th:if="${error}">
@@ -13,10 +14,10 @@
             <div class="py-5 text-center" th:if="${error==null}">
                 <p class="lead">알리지 이메일 확인</p>
                 <h2>
-                    이메일을 확인했습니다. <span th:text="${numberOfUser}">10</span>번째 회원,
+                    이메일을 확인했습니다.<br><span th:text="${numberOfUser}">10</span>번째 회원,
                     <span th:text="${nickname}">닉네임</span>님 가입을 축하합니다.
                 </h2>
-                <small class="text-info">이제부터 가입할 때 사용한 이메일 또는 닉네임과 패스트워드로 로그인 할 수 있습니다.</small>
+                <small class="text-info">이제부터 가입할 때 사용한 이메일 또는 닉네임과 패스ㅕ워드로 로그인 할 수 있습니다.</small>
             </div>
         </div>
     </div>
