--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -3,87 +3,87 @@
 <head th:replace="fragments.html :: head (page='sign-up')"></head>
 <body style="background-color: #666666;">
 <nav th:replace="fragments.html::main-nav"></nav>
-<div class="limiter">
-    <div class="container-login100">
-        <div class="wrap-login100">
-            <form class="needs-validation login100-form validate-form" th:action="@{/sign-up}" th:object="${signUpForm}" method="post">
-                <span class="login100-form-title p-b-43">
-                    SIGN UP
-                </span>
-
-                <div class="form-group wrap-input100 validate-input" data-validate = "이메일 형식에 맞지 않습니다.">
-                    <input type="email" class="input100" name="email" id="email" aria-describedby="emailHelp"
-                           th:field="*{email}" required>
-                    <span class="focus-input100"></span>
-                    <span class="label-input100">Email</span>
-                </div>
-                <small class="form-text text-danger text-center" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email</small>
-                <br th:if="${#fields.hasErrors('email')}">
-
-                <div class="form-group wrap-input100 validate-input" data-validate="닉네임을 입력하세요.">
-                    <input type="text" class="input100" name="nickname" id="nickname" aria-describedby="nicknameHelp"
-                           th:field="*{nickname}" required>
-                    <span class="focus-input100"></span>
-                    <span class="label-input100">Nickname</span>
-                </div>
-                <small class="form-text text-danger text-center" th:if="${#fields.hasErrors('nickname')}" th:errors="*{nickname}">Nickname</small>
-                <br th:if="${#fields.hasErrors('nickname')}">
-
-                <div class="form-group wrap-input100 validate-input" data-validate="패스워드를 입력하세요.">
-                    <input type="password" class="input100" name="password" id="password" aria-describedby="passwordHelp"
-                           th:field="*{password}" required>
-                    <span class="focus-input100"></span>
-                    <span class="label-input100">Password</span>
-                </div>
-                <small class="form-text text-danger text-center" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password</small>
-                <br th:if="${#fields.hasErrors('password')}">
-
-                <div class="form-group wrap-input100 validate-input" data-validate="패스워드를 한번 더 입력하세요.">
-                    <input type="password" class="input100" name="passwordConfirm" id="passwordConfirm" aria-describedby="passwordConfirmHelp"
-                           th:field="*{passwordConfirm}" required>
-                    <span class="focus-input100"></span>
-                    <span class="label-input100">PasswordConfirm</span>
-                </div>
-                <small class="form-text text-danger text-center" th:if="${#fields.hasErrors('passwordConfirm')}" th:errors="*{passwordConfirm}">PasswordConfirm</small>
-                <br th:if="${#fields.hasErrors('passwordConfirm')}">
-
-                <div class="flex-sb-m w-full p-t-3 p-b-32">
-                    <div class="contact100-form-checkbox">
-                    </div>
-
-                    <div>
-                        <a href="#" class="txt1">
-                            이미 회원이신가요?
-                        </a>
-                    </div>
-                </div>
-                <div class="container-login100-form-btn">
-                    <button type="submit" class="login100-form-btn">
+    <div class="limiter">
+        <div class="container-login100">
+            <div class="wrap-login100">
+                <form class="needs-validation login100-form validate-form" th:action="@{/sign-up}" th:object="${signUpForm}" method="post">
+                    <span class="login100-form-title p-b-43">
                         SIGN UP
-                    </button>
-                </div>
-                <!--<div class="text-center p-t-46 p-b-20">
-						<span class="txt2">
-							or sign up using
-						</span>
-                </div>-->
-            </form>
+                    </span>
 
-            <div class="login100-more" style="background-image: url('images/bg-01.jpg');">
+                    <div class="form-group wrap-input100 validate-input" data-validate = "이메일 형식에 맞지 않습니다.">
+                        <input type="email" class="input100" name="email" id="email" aria-describedby="emailHelp"
+                               th:field="*{email}" required>
+                        <span class="focus-input100"></span>
+                        <span class="label-input100">Email</span>
+                    </div>
+                    <small class="form-text text-danger text-center" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email</small>
+                    <br th:if="${#fields.hasErrors('email')}">
+
+                    <div class="form-group wrap-input100 validate-input" data-validate="닉네임을 입력하세요.">
+                        <input type="text" class="input100" name="nickname" id="nickname" aria-describedby="nicknameHelp"
+                               th:field="*{nickname}" required>
+                        <span class="focus-input100"></span>
+                        <span class="label-input100">Nickname</span>
+                    </div>
+                    <small class="form-text text-danger text-center" th:if="${#fields.hasErrors('nickname')}" th:errors="*{nickname}">Nickname</small>
+                    <br th:if="${#fields.hasErrors('nickname')}">
+
+                    <div class="form-group wrap-input100 validate-input" data-validate="패스워드를 입력하세요.">
+                        <input type="password" class="input100" name="password" id="password" aria-describedby="passwordHelp"
+                               th:field="*{password}" required>
+                        <span class="focus-input100"></span>
+                        <span class="label-input100">Password</span>
+                    </div>
+                    <small class="form-text text-danger text-center" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password</small>
+                    <br th:if="${#fields.hasErrors('password')}">
+
+                    <div class="form-group wrap-input100 validate-input" data-validate="패스워드를 한번 더 입력하세요.">
+                        <input type="password" class="input100" name="passwordConfirm" id="passwordConfirm" aria-describedby="passwordConfirmHelp"
+                               th:field="*{passwordConfirm}" required>
+                        <span class="focus-input100"></span>
+                        <span class="label-input100">PasswordConfirm</span>
+                    </div>
+                    <small class="form-text text-danger text-center" th:if="${#fields.hasErrors('passwordConfirm')}" th:errors="*{passwordConfirm}">PasswordConfirm</small>
+                    <br th:if="${#fields.hasErrors('passwordConfirm')}">
+
+                    <div class="flex-sb-m w-full p-t-3 p-b-32">
+                        <div class="contact100-form-checkbox">
+                        </div>
+
+                        <div>
+                            <a th:href="@{/login}" class="txt1">
+                                이미 회원이신가요?
+                            </a>
+                        </div>
+                    </div>
+                    <div class="container-login100-form-btn">
+                        <button type="submit" class="login100-form-btn">
+                            SIGN UP
+                        </button>
+                    </div>
+                    <!--<div class="text-center p-t-46 p-b-20">
+                            <span class="txt2">
+                                or sign up using
+                            </span>
+                    </div>-->
+                </form>
+
+                <div class="login100-more" style="background-image: url('images/bg-01.jpg');">
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<!--===============================================================================================-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/animsition/3.2.1/js/animsition.min.js"></script>
-<!--===============================================================================================-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.9/js/select2.min.js"></script>
-<!--===============================================================================================-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.0/moment.min.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
-<!--===============================================================================================-->
-<script src="js/main.js"></script>
-
+    <!--===============================================================================================-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animsition/3.2.1/js/animsition.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.9/js/select2.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.0/moment.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="js/main.js"></script>
+    <script th:replace="fragments.html :: form-validation"></script>
 </body>
 </html>
