--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -86,6 +86,27 @@
     </div>
 </nav>
 
+<script type="application/javascript" th:fragment="form-validation">
+    (function (){
+        'use strict';
+
+        window.addEventListener('load', function () {
+
+            var forms = document.getElementsByClassName('needs-validation');
+
+            Array.prototype.filter.call(forms, function (form) {
+                form.addEventListener('submit', function (event) {
+                    if (form.checkValidity() === false) {
+                        event.preventDefault();
+                        event.stopPropagation();
+                    }
+                    form.classList.add('was-validated')
+                }, false)
+            })
+        }, false)
+    }())
+</script>
+
 <footer th:fragment="footer">
     <div class="row justify-content-center">
         <img class="mb-2" src="/images/icons/favicon.ico" alt="" width=2%/>
