feat: Create Remember-me

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,8 +28,8 @@
                     </div>
                     <div class="flex-sb-m w-full p-t-3 p-b-32">
                         <div class="contact100-form-checkbox">
-                            <input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
-                            <label class="label-checkbox100" for="ckb1">
+                            <input class="input-checkbox100 form-check-input" id="rememberMe" type="checkbox" name="remember-me" checked>
+                            <label class="label-checkbox100 form-check-label" for="rememberMe">
                                 로그인 유지
                             </label>
                         </div>
