--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -59,7 +59,7 @@
                     </div>
                     <div class="container-login100-form-btn">
                         <button type="submit" class="login100-form-btn">
-                            SIGN UP
+                            다음 단계
                         </button>
                     </div>
                     <!--<div class="text-center p-t-46 p-b-20">
@@ -69,7 +69,7 @@
                     </div>-->
                 </form>
 
-                <div class="login100-more" style="background-image: url('images/bg-01.jpg');">
+                <div class="login100-more" style="background-image: url('/images/bg-01.jpg');">
                 </div>
             </div>
         </div>
