--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -113,11 +113,11 @@
 
 <div th:fragment="profile-menu (profileMenu)" class="row px-3 justify-content-center bg-light">
     <nav class="col-10 nav nav-tabs">
-        <a class="nav-item nav-link" href="#" th:classappend="${profileMenu == 'info'}? active" th:href="@{'/profile/'}">
-            <i class="fa fa-info-circle"></i> 소개
+        <a class="nav-item nav-link" href="#" th:classappend="${profileMenu == 'info'}? active" th:href="@{'/profile/'+ ${account.nickname}}">
+            <i class="fa fa-info-circle"></i> 내정보
         </a>
-        <a class="nav-item nav-link" href="#" th:classappend="${profileMenu == 'members'}? active" th:href="@{'/profile/'}">
-            <i class="fa fa-user"></i> 구성원
+        <a class="nav-item nav-link" href="#" th:classappend="${profileMenu == 'children'}? active" th:href="@{'/profile/' + ${account.nickname} + '/children'}">
+            <i class="fa fa-user"></i> 학생 관리
         </a>
         <a class="nav-item nav-link" th:classappend="${profileMenu == 'events'}? active" href="#" th:href="@{'/profile/'}">
             <i class="fa fa-calendar"></i> 모임
@@ -127,6 +127,14 @@
             <i class="fa fa-cog"></i> 설정
         </a>
     </nav>
+</div>
+
+<div th:fragment="settings-menu (currentMenu)" class="list-group">
+    <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'profile'}? active" href="#" th:href="@{/settings/profile}">프로필</a>
+    <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'password'}? active" href="#" th:href="@{/settings/password}">패스워드</a>
+    <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'notifications'}? active" href="#" th:href="@{/settings/notifications}">알림</a>
+    <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'zones'}? active" href="#" th:href="@{/settings/zones}">활동 지역</a>
+    <a class="list-group-item list-group-item-action list-group-item-danger" th:classappend="${currentMenu == 'account'}? active" href="#" th:href="@{/settings/account}">계정</a>
 </div>
 
 <script type="application/javascript" th:fragment="form-validation">
