--- a/src/main/resources/templates/settings/profile.html
+++ b/src/main/resources/templates/settings/profile.html
@@ -4,6 +4,7 @@
 <head th:replace="fragments.html :: head(page)"></head>
 <body class="bg-light">
 <div th:replace="fragments.html :: main-nav"></div>
+<div th:replace="fragments.html :: profile-banner"></div>
 <div class="container">
     <div class="row mt-5 justify-content-center">
         <div class="col-2">
