--- a/src/main/resources/templates/settings/password.html
+++ b/src/main/resources/templates/settings/password.html
@@ -18,10 +18,10 @@
                     </button>
                 </div>
                 <div class="row">
-                    <h2 class="col-sm-12" th:text="${account.nickname}">username</h2>
+                    <h2 class="col-12">비밀번호 설정</h2>
                 </div>
                 <div class="row mt-3">
-                    <form class="col-sm-6" action="#"
+                    <form class="col-6" action="#"
                           th:action="@{/settings/password}" th:object="${passwordForm}" method="post" novalidate>
 
                         <div class="form-group">
@@ -44,13 +44,13 @@
                             <small class="form-text text-danger" th:if="${#fields.hasErrors('passwordConfirm')}" th:errors="*{passwordConfirm}">passwordConfirm Error</small>
                         </div>
                         <div class="form-group">
-                            <button class="btn btn-primary btn-block" type="submit"
-                                    aria-describedby="submitHelp">수정하기</button>
+                            <button class="btn btn-primary btn-block" type="submit" aria-describedby="submitHelp">수정하기</button>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
+        <div th:replace="fragments.html :: footer"></div>
     </div>
 </body>
 </html>
