--- a/src/main/resources/templates/account/children.html
+++ b/src/main/resources/templates/account/children.html
@@ -30,7 +30,23 @@
                 <h5 class="card-title" th:text="${child.name}"></h5>
                 <div class="card-text">
                   <p style="font-size: 15px;">
-                    <span th:if="${child.getGroupName()==null && isOwner}">
+                    <span th:if="${child.getBirth()==null && isOwner}">
+                      <i class="fa fa-users" aria-hidden="true"></i> 학생의 생년월일을 설정해주세요.
+                    </span>
+                    <span style="font-size: 15px;" th:if="${child.getBirth()!=null}">
+                      <i class="fa fa-users" aria-hidden="true"></i> <span th:text="${child.getBirth()}"></span>
+                    </span>
+                  </p>
+                  <p style="font-size: 15px;">
+                    <span th:if="${(child.getPhone()==null || child.getPhone().length() == 0) && isOwner}">
+                      <i class="fa fa-users" aria-hidden="true"></i> 학생의 전화번호를 설정해주세요.
+                    </span>
+                    <span style="font-size: 15px;" th:if="${child.getPhone()!=null}">
+                      <i class="fa fa-users" aria-hidden="true"></i> <span th:text="${child.getPhone()}"></span>
+                    </span>
+                  </p>
+                  <p style="font-size: 15px;">
+                    <span th:if="${(child.getGroupName()==null || child.getGroupName().length()==0) && isOwner}">
                       <i class="fa fa-users" aria-hidden="true"></i> 학생의 반을 설정해주세요.
                     </span>
                     <span style="font-size: 15px;" th:if="${child.getGroupName()!=null}">
@@ -38,15 +54,15 @@
                     </span>
                   </p>
                   <p style="font-size: 15px;">
-                    <span th:if="${child.getSchool()==null && isOwner}">
+                    <span th:if="${(child.getSchoolName()==null || child.getSchoolName().length()==0) && isOwner}">
                       <i class="fa fa-university" aria-hidden="true"></i> 학생의 학교를 설정해주세요.
                     </span>
-                    <span style="font-size: 15px;" th:if="${child.getSchool()!=null}">
-                      <i class="fa fa-university" aria-hidden="true"></i> <span th:text="${child.getSchool()}"></span>
+                    <span style="font-size: 15px;" th:if="${child.getSchoolName()!=null}">
+                      <i class="fa fa-university" aria-hidden="true"></i> <span th:text="${child.getSchoolName()}"></span>
                     </span>
                   </p>
                 </div>
-                <a href="#" class="btn btn-primary">상세 설정</a>
+                <a th:if="${isOwner}" th:href="@{'/settings/child/' + ${child.id}}" class="btn btn-primary">상세 설정</a>
               </div>
             </div>
           </div>
