style: Update children view & Refactor image croppper

--- a/src/main/resources/templates/account/children.html
+++ b/src/main/resources/templates/account/children.html
@@ -30,24 +30,8 @@
                 <h5 class="card-title" th:text="${child.name}"></h5>
                 <div class="card-text">
                   <p style="font-size: 15px;">
-                    <span th:if="${child.getBirth()==null && isOwner}">
-                      <i class="fa fa-users" aria-hidden="true"></i> 학생의 생년월일을 설정해주세요.
-                    </span>
-                    <span style="font-size: 15px;" th:if="${child.getBirth()!=null}">
-                      <i class="fa fa-users" aria-hidden="true"></i> <span th:text="${child.getBirth()}"></span>
-                    </span>
-                  </p>
-                  <p style="font-size: 15px;">
-                    <span th:if="${(child.getPhone()==null || child.getPhone().length() == 0) && isOwner}">
-                      <i class="fa fa-users" aria-hidden="true"></i> 학생의 전화번호를 설정해주세요.
-                    </span>
-                    <span style="font-size: 15px;" th:if="${child.getPhone()!=null}">
-                      <i class="fa fa-users" aria-hidden="true"></i> <span th:text="${child.getPhone()}"></span>
-                    </span>
-                  </p>
-                  <p style="font-size: 15px;">
                     <span th:if="${(child.getGroupName()==null || child.getGroupName().length()==0) && isOwner}">
-                      <i class="fa fa-users" aria-hidden="true"></i> 학생의 반을 설정해주세요.
+                      <i class="fa fa-users" aria-hidden="true"></i> 반을 설정해주세요.
                     </span>
                     <span style="font-size: 15px;" th:if="${child.getGroupName()!=null}">
                       <i class="fa fa-users" aria-hidden="true"></i> <span th:text="${child.getGroupName()}"></span>
@@ -55,10 +39,26 @@
                   </p>
                   <p style="font-size: 15px;">
                     <span th:if="${(child.getSchoolName()==null || child.getSchoolName().length()==0) && isOwner}">
-                      <i class="fa fa-university" aria-hidden="true"></i> 학생의 학교를 설정해주세요.
+                      <i class="fa fa-university" aria-hidden="true"></i> 학교를 설정해주세요.
                     </span>
                     <span style="font-size: 15px;" th:if="${child.getSchoolName()!=null}">
                       <i class="fa fa-university" aria-hidden="true"></i> <span th:text="${child.getSchoolName()}"></span>
+                    </span>
+                  </p>
+                  <p style="font-size: 15px;">
+                    <span th:if="${child.getBirth()==null && isOwner}">
+                      <i class="fa fa-birthday-cake" aria-hidden="true"></i> 생년월일을 설정해주세요.
+                    </span>
+                    <span style="font-size: 15px;" th:if="${child.getBirth()!=null}">
+                      <i class="fa fa-users" aria-hidden="true"></i> <span th:text="${child.getBirth()}"></span>
+                    </span>
+                  </p>
+                  <p style="font-size: 15px;">
+                    <span th:if="${(child.getPhone()==null || child.getPhone().length() == 0) && isOwner}">
+                      <i class="fa fa-phone" aria-hidden="true"></i> 전화번호를 설정해주세요.
+                    </span>
+                    <span style="font-size: 15px;" th:if="${child.getPhone()!=null}">
+                      <i class="fa fa-users" aria-hidden="true"></i> <span th:text="${child.getPhone()}"></span>
                     </span>
                   </p>
                 </div>
