--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security" xmlns="">
 
 <head th:fragment="head (page)">
     <meta name="viewport" charset="UTF-8" content="width=device-width, initial-scale=1">
@@ -113,6 +113,45 @@
     <img th:src="${account.banner}"/>
 </div>
 
+<div class="col-sm-6" th:fragment="set-image (form)">
+    <div class="card text-center">
+        <div class="card-header">
+            프로필 이미지
+        </div>
+        <div id="current-profile-image" class="mt-3">
+            <div th:if="${form == 'account'}">
+                <svg th:if="${#strings.isEmpty(profileForm.profileImage)}" class="rounded"
+                     th:data-jdenticon-value="${account.nickname}" width="125" height="125"></svg>
+                <img th:if="${!#strings.isEmpty(profileForm.profileImage)}" class="rounded"
+                     th:src="${profileForm.profileImage}"
+                     width="125" height="125" alt="name" th:alt="${account.nickname}"/>
+            </div>
+            <div th:if="${form == 'child'}">
+                <div id="current-profile-image" class="mt-3">
+                    <svg th:if="${#strings.isEmpty(childForm.profileImage)}" class="rounded"
+                         th:data-jdenticon-value="${childForm.name}" width="125" height="125"></svg>
+                    <img th:if="${!#strings.isEmpty(childForm.profileImage)}" class="rounded"
+                         th:src="${childForm.profileImage}"
+                         width="125" height="125" alt="name" th:alt="${childForm.name}"/>
+                </div>
+            </div>
+        </div>
+        <div id="new-profile-image" class="mt-3"></div>
+        <div class="card-body">
+            <div class="custom-file">
+                <input type="file" class="custom-file-input" id="profile-image-file">
+                <label class="custom-file-label" for="profile-image-file">프로필 이미지 변경</label>
+            </div>
+            <div id="new-profile-image-control" class="mt-3">
+                <button class="btn btn-outline-primary btn-block" id="cut-button">자르기</button>
+                <button class="btn btn-outline-success btn-block" id="confirm-button">확인</button>
+                <button class="btn btn-outline-warning btn-block" id="reset-button">취소</button>
+            </div>
+            <div id="cropped-new-profile-image" class="mt-3"></div>
+        </div>
+    </div>
+</div>
+
 <div th:fragment="profile-menu (profileMenu)" class="row px-3 justify-content-center bg-light">
     <nav class="col-10 nav nav-tabs">
         <a class="nav-item nav-link" href="#" th:classappend="${profileMenu == 'info'}? active" th:href="@{'/profile/'+ ${account.nickname}}">
@@ -165,6 +204,86 @@
         }, false)
     }())
 </script>
+
+<div th:fragment="crop-image">
+    <link href="/node_modules/cropper/dist/cropper.min.css" rel="stylesheet"/>
+    <script src="/node_modules/cropper/dist/cropper.min.js"></script>
+    <script src="/node_modules/jquery-cropper/dist/jquery-cropper.min.js"></script>
+    <script type="application/javascript">
+        $(function() {
+            cropper = '';
+            let $confirmBtn = $("#confirm-button");
+            let $resetBtn = $("#reset-button");
+            let $cutBtn = $("#cut-button");
+            let $newProfileImage = $("#new-profile-image");
+            let $currentProfileImage = $("#current-profile-image");
+            let $resultImage = $("#cropped-new-profile-image");
+            let $profileImage = $("#profileImage");
+
+            $newProfileImage.hide();
+            $cutBtn.hide();
+            $resetBtn.hide();
+            $confirmBtn.hide();
+
+            $("#profile-image-file").change(function(e) {
+                if (e.target.files.length === 1) {
+                    const reader = new FileReader();
+                    reader.onload = e => {
+                        if (e.target.result) {
+                            let img = document.createElement("img");
+                            img.id = 'new-profile';
+                            img.src = e.target.result;
+                            img.width = 250;
+
+                            $newProfileImage.html(img);
+                            $newProfileImage.show();
+                            $currentProfileImage.hide();
+
+                            let $newImage = $(img);
+                            $newImage.cropper({aspectRatio: 1});
+                            cropper = $newImage.data('cropper');
+
+                            $cutBtn.show();
+                            $confirmBtn.hide();
+                            $resetBtn.show();
+                        }
+                    };
+
+                    reader.readAsDataURL(e.target.files[0]);
+                }
+            });
+
+            $resetBtn.click(function() {
+                $currentProfileImage.show();
+                $newProfileImage.hide();
+                $resultImage.hide();
+                $resetBtn.hide();
+                $cutBtn.hide();
+                $confirmBtn.hide();
+                $profileImage.val('');
+            });
+
+            $cutBtn.click(function () {
+                let dataUrl = cropper.getCroppedCanvas().toDataURL();
+                let newImage = document.createElement("img");
+                newImage.id = "cropped-new-profile-image";
+                newImage.src = dataUrl;
+                newImage.width = 125;
+                $resultImage.html(newImage);
+                $resultImage.show();
+                $confirmBtn.show();
+
+                $confirmBtn.click(function () {
+                    $newProfileImage.html(newImage);
+                    $cutBtn.hide();
+                    $confirmBtn.hide();
+                    $profileImage.val(dataUrl);
+                });
+            });
+        });
+    </script>
+</div>
+
 
 <footer th:fragment="footer">
     <div class="row justify-content-center">
