--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -100,6 +100,7 @@
                     <a class="dropdown-item" >스터디</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#" th:href="@{'/settings/profile'}">설정</a>
+                    <a class="dropdown-item" href="#" th:href="@{'/profile/' + ${account.nickname} +'/children'}">학생 관리</a>
                     <form class="form-inline my-2 my-lg-0" action="#" th:action="@{/logout}" method="post">
                         <button class="dropdown-item" type="submit">로그아웃</button>
                     </form>
@@ -109,7 +110,7 @@
     </div>
 </nav>
 
-<div th:fragment="profile-banner" th:if="${account.banner != null}" class="row" id="profile-banner">
+<div th:fragment="profile-banner" th:if="${account.useBanner}" class="row" id="profile-banner">
     <img th:src="${account.banner}"/>
 </div>
 
@@ -174,7 +175,7 @@
     <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'profile'}? active" href="#" th:href="@{/settings/profile}">프로필</a>
     <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'password'}? active" href="#" th:href="@{/settings/password}">패스워드</a>
     <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'notifications'}? active" href="#" th:href="@{/settings/notifications}">알림</a>
-    <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'zones'}? active" href="#" th:href="@{/settings/zones}">활동 지역</a>
+    <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'banner'}? active" href="#" th:href="@{/settings/banner}">배너 화면</a>
     <a class="list-group-item list-group-item-action list-group-item-danger" th:classappend="${currentMenu == 'account'}? active" href="#" th:href="@{/settings/account}">계정</a>
 </div>
 
@@ -205,11 +206,12 @@
     }())
 </script>
 
-<div th:fragment="crop-image">
+<div th:fragment="crop-image (image)">
     <link href="/node_modules/cropper/dist/cropper.min.css" rel="stylesheet"/>
     <script src="/node_modules/cropper/dist/cropper.min.js"></script>
     <script src="/node_modules/jquery-cropper/dist/jquery-cropper.min.js"></script>
-    <script type="application/javascript">
+    <div th:if="${image == 'profile'}">
+        <script type="application/javascript">
         $(function() {
             cropper = '';
             let $confirmBtn = $("#confirm-button");
@@ -230,10 +232,15 @@
                     const reader = new FileReader();
                     reader.onload = e => {
                         if (e.target.result) {
+                            if (!e.target.result.startsWith("data:image")) {
+                                alert("이미지 파일을 선택하세요.");
+                                return;
+                            }
+
                             let img = document.createElement("img");
                             img.id = 'new-profile';
                             img.src = e.target.result;
-                            img.width = 250;
+                            img.setAttribute('width', '100%');
 
                             $newProfileImage.html(img);
                             $newProfileImage.show();
@@ -265,6 +272,12 @@
 
             $cutBtn.click(function () {
                 let dataUrl = cropper.getCroppedCanvas().toDataURL();
+
+                if (dataUrl.length > 1000 * 1024) {
+                    alert("이미지 파일이 너무 큽니다. 1024000 보다 작은 파일을 사용하세요. 현재 이미지 사이즈 " + dataUrl.length);
+                    return;
+                }
+
                 let newImage = document.createElement("img");
                 newImage.id = "cropped-new-profile-image";
                 newImage.src = dataUrl;
@@ -282,7 +295,108 @@
             });
         });
     </script>
+    </div>
+    <div th:if="${image == 'banner'}">
+        <script type="application/javascript">
+            $(function() {
+                cropper = '';
+                let $confirmBtn = $("#confirm-button");
+                let $resetBtn = $("#reset-button");
+                let $cutBtn = $("#cut-button");
+                let $saveBtn = $("#save-button");
+                let $newBannerImage = $("#new-banner-image");
+                let $currentBannerImage = $("#current-banner-image");
+                let $resultImage = $("#cropped-new-banner-image");
+                let $bannerImage = $("#bannerImage");
+
+                $newBannerImage.hide();
+                $cutBtn.hide();
+                $resetBtn.hide();
+                $confirmBtn.hide();
+                $saveBtn.hide();
+
+                $("#banner-image-file").change(function(e) {
+                    if (e.target.files.length === 1) {
+                        const reader = new FileReader();
+                        reader.onload = e => {
+                            if (e.target.result) {
+                                if (!e.target.result.startsWith("data:image")) {
+                                    alert("이미지 파일을 선택하세요.");
+                                    return;
+                                }
+
+                                let img = document.createElement("img");
+                                img.id = 'new-banner';
+                                img.src = e.target.result;
+                                img.setAttribute('width', '100%');
+
+                                $newBannerImage.html(img);
+                                $newBannerImage.show();
+                                $currentBannerImage.hide();
+
+                                let $newImage = $(img);
+                                $newImage.cropper({aspectRatio: 13/2});
+                                cropper = $newImage.data('cropper');
+
+                                $cutBtn.show();
+                                $confirmBtn.hide();
+                                $resetBtn.show();
+                            }
+                        };
+
+                        reader.readAsDataURL(e.target.files[0]);
+                    }
+                });
+
+                $resetBtn.click(function() {
+                    $currentBannerImage.show();
+                    $newBannerImage.hide();
+                    $resultImage.hide();
+                    $resetBtn.hide();
+                    $cutBtn.hide();
+                    $confirmBtn.hide();
+                    $saveBtn.hide();
+                    $bannerImage.val('');
+                });
+
+                $cutBtn.click(function () {
+                    let dataUrl = cropper.getCroppedCanvas().toDataURL();
+
+                    if (dataUrl.length > 1000 * 1024) {
+                        alert("이미지 파일이 너무 큽니다. 1024000 보다 작은 파일을 사용하세요. 현재 이미지 사이즈 " + dataUrl.length);
+                        return;
+                    }
+
+                    let newImage = document.createElement("img");
+                    newImage.id = "cropped-new-banner-image";
+                    newImage.src = dataUrl;
+                    newImage.width = 640;
+                    $resultImage.html(newImage);
+                    $resultImage.show();
+                    $confirmBtn.show();
+
+                    $confirmBtn.click(function () {
+                        $newBannerImage.html(newImage);
+                        $cutBtn.hide();
+                        $confirmBtn.hide();
+                        $bannerImage.val(dataUrl);
+                        $saveBtn.show();
+                    });
+                });
+
+                $saveBtn.click(function() {
+                    $("#bannerForm").submit();
+                })
+            });
+        </script>
+    </div>
 </div>
+
+<script th:fragment="tooltip" type="application/javascript">
+    $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+    })
+</script>
 
 
 <footer th:fragment="footer">
