--- a/src/main/resources/templates/settings/password.html
+++ b/src/main/resources/templates/settings/password.html
@@ -52,5 +52,6 @@
         </div>
         <div th:replace="fragments.html :: footer"></div>
     </div>
+    <script th:replace="fragments.html :: tooltip"></script>
 </body>
 </html>
