--- a/src/main/resources/templates/settings/profile.html
+++ b/src/main/resources/templates/settings/profile.html
@@ -72,6 +72,7 @@
         </div>
         <div th:replace="fragments.html :: footer"></div>
     </div>
-    <div th:replace="fragments.html :: crop-image"></div>
+    <script th:replace="fragments.html :: tooltip"></script>
+    <div th:replace="fragments.html :: crop-image (image='profile')"></div>
 </body>
 </html>
